# synthetic-control

./: README.md  pyproject.toml
src/: utils.py
src/features/: synthetic_control.py
src/models/: pytorch_synthetic_control.py
src/visualization/: visualize.py
